force-app/main/default/objects/SupplyChain__c/SupplyChain__c.object-meta.xml
<CustomObject>
    <label>Supply Chain</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supply Chains</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>