force-app/main/default/objects/SupplyChain__c/fields/application__c.field-meta.xml
<CustomField>
    <fullName>application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>application</valueSetName>
    </valueSet>
</CustomField>