force-app/main/default/objects/SupplyChain__c/fields/decisionMaker__c.field-meta.xml
<CustomField>
    <fullName>decisionMaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision Maker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supply Chains (Decision Maker)</relationshipLabel>
    <relationshipName>Supply_Chains3</relationshipName>
    <type>Lookup</type>
</CustomField>