force-app/main/default/objects/SupplyChain__c/fields/finisher__c.field-meta.xml
<CustomField>
    <fullName>finisher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finisher</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account does not contain pricing</errorMessage>
        <filterItems>
            <field>Account.containsPricing__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supply Chains (Finisher)</relationshipLabel>
    <relationshipName>Supply_Chains2</relationshipName>
    <type>Lookup</type>
</CustomField>