force-app/main/default/objects/SupplyChain__c/fields/finisherAeUserId__c.field-meta.xml
<CustomField>
    <fullName>finisherAeUserId__c</fullName>
    <formula>finisher__r.ae__r.Id</formula>
    <label>Finisher AE User ID</label>
    <type>Text</type>
</CustomField>