force-app/main/default/objects/SupplyChain__c/fields/finisherAmUserId__c.field-meta.xml
<CustomField>
    <fullName>finisherAmUserId__c</fullName>
    <formula>finisher__r.OwnerId</formula>
    <label>Finisher AM User ID</label>
    <type>Text</type>
</CustomField>