force-app/main/default/objects/SupplyChain__c/fields/lcm__c.field-meta.xml
<CustomField>
    <fullName>lcm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LCM</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supply Chains (LCM)</relationshipLabel>
    <relationshipName>Supply_Chains4</relationshipName>
    <type>Lookup</type>
</CustomField>