force-app/main/default/objects/SupplyChain__c/fields/odm__c.field-meta.xml
<CustomField>
    <fullName>odm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ODM</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supply Chains (ODM)</relationshipLabel>
    <relationshipName>Supply_Chains</relationshipName>
    <type>Lookup</type>
</CustomField>