force-app/main/default/objects/SupplyChain__c/fields/odmAeUserId__c.field-meta.xml
<CustomField>
    <fullName>odmAeUserId__c</fullName>
    <formula>odm__r.ae__r.Id</formula>
    <label>ODM AE User ID</label>
    <type>Text</type>
</CustomField>