force-app/main/default/objects/SupplyChain__c/fields/odmAmUserId__c.field-meta.xml
<CustomField>
    <fullName>odmAmUserId__c</fullName>
    <formula>odm__r.Owner.Id</formula>
    <label>ODM AM User ID</label>
    <type>Text</type>
</CustomField>