force-app/main/default/objects/SupplyChain__c/fields/oem__c.field-meta.xml
<CustomField>
    <fullName>oem__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; opportunity__r.AccountId 
,opportunity__r.Account.Name)</formula>
    <label>OEM</label>
    <type>Text</type>
</CustomField>