force-app/main/default/objects/SupplyChain__c/fields/oemAeUserId__c.field-meta.xml
<CustomField>
    <fullName>oemAeUserId__c</fullName>
    <formula>opportunity__r.Account.ae__r.Id</formula>
    <label>OEM AE User ID</label>
    <type>Text</type>
</CustomField>