force-app/main/default/objects/SupplyChain__c/fields/oemAmUserId__c.field-meta.xml
<CustomField>
    <fullName>oemAmUserId__c</fullName>
    <formula>opportunity__r.Account.OwnerId</formula>
    <label>OEM AM User ID</label>
    <type>Text</type>
</CustomField>