force-app/main/default/objects/SupplyChain__c/fields/oemId__c.field-meta.xml
<CustomField>
    <fullName>oemId__c</fullName>
    <formula>opportunity__r.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEM ID</label>
    <type>Text</type>
</CustomField>