force-app/main/default/objects/SupplyChain__c/fields/panelMaker__c.field-meta.xml
<CustomField>
    <fullName>panelMaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Panel Maker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supply Chains (Panel Maker)</relationshipLabel>
    <relationshipName>Supply_Chains5</relationshipName>
    <type>Lookup</type>
</CustomField>