force-app/main/default/objects/SupplyChain__c/fields/pointOfContact__c.field-meta.xml
<CustomField>
    <fullName>pointOfContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supply Chains</relationshipLabel>
    <relationshipName>Supply_Chains</relationshipName>
    <type>Lookup</type>
</CustomField>