force-app/main/default/objects/SupplyChain__c/fields/remarks__c.field-meta.xml
<CustomField>
    <fullName>remarks__c</fullName>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>