force-app/main/default/objects/SupplyChain__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD1</fullName>
            </value>
            <value>
                <fullName>TBD2</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Not Pursued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>