force-app/main/default/objects/SupplyChain__c/fields/tpm__c.field-meta.xml
<CustomField>
    <fullName>tpm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TPM</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supply Chains (TPM)</relationshipLabel>
    <relationshipName>Supply_Chains1</relationshipName>
    <type>Lookup</type>
</CustomField>