force-app/main/default/objects/SupplyChain__c/fields/tpmAeUserId__c.field-meta.xml
<CustomField>
    <fullName>tpmAeUserId__c</fullName>
    <formula>tpm__r.ae__r.Id</formula>
    <label>TPM AE User ID</label>
    <type>Text</type>
</CustomField>