force-app/main/default/objects/SupplyChain__c/fields/tpmAmUserId__c.field-meta.xml
<CustomField>
    <fullName>tpmAmUserId__c</fullName>
    <formula>tpm__r.Owner.Id</formula>
    <label>TPM AM User ID</label>
    <type>Text</type>
</CustomField>