force-app/main/default/objects/SupplyChain__c/fields/yield__c.field-meta.xml
<CustomField>
    <fullName>yield__c</fullName>
    <label>Yield %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>